# SupplyChain_PredictionModel

./: README.md  best_model.pkl  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
deployments/: gradio_app.py  streamlit_app.py
models/: best_model.pkl  preprocessor.pkl
research/: automl.ipynb  best_model.pkl  demo.ipynb  model.ipynb  regression_model.ipynb
src/: data_exploration.py  data_ingestion.py  data_preprocessing.py  model_build.py  model_evaluation.py
