[project]
name = "supplychain-predictionmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "automl>=2.7.7",
    "dvc>=3.66.1",
    "flaml>=2.5.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "numpy>=1.26.4",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pydentic>=0.0.1.dev3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
    "xgboost>=3.2.0",
]
